# adventofcode

2019/Day 04/: day04_part01_solution.py  day4_part02_solution.py
2019/Day02/: solution.py
2020/Day 01/: alternative_solution.py  day01_part01_solution.py  day01_part02_solution.py  day01_tckmn.py
2020/Day 02/: day02_part01_solution.py  day02_part_02_solution.py  tckmn.py
2020/Day03/: day03_part01_solution.py
2020/Day04/: day04_part01_solution.py  day04_part02_solution.py  day04_part02_solution_concise.py
2020/Day05/: day05_solution.py
2020/Day06/: day06_part01_solution.py  day06_part02_solution.py
2020/Day07/: day07_part01_solution.py  day07_part02_solution.py
2020/Day08/: solution.py  solution_part02.py
2020/Day09/: solution.py
2020/Day10/: sandbox.py  solution.py  solution_02.py
2021/Day 01/: Book1.xlsx
2021/Day 02/: part_01.py  part_02.py
2021/Day 03/: part_01.py  part_02.py
2021/Day 04/: part_01.py  part_02.py
2021/Day 05/: part_01.py  part_02.py
2021/Day 06/: part_01.py  part_02.py
2021/Day 07/: part_01.py  part_02.py
2021/Day 08/: part_01.py  part_02.py
2021/Day 09/: part_01.py  part_02.py
2021/Day 10/: part_01.py  part_02.py
2021/Day 11/: day_01.py  day_02.py
2021/Day 12/: part_01.py  part_02.py
2021/Day 13/: input.txt  part_01.py  part_02.py  sample_folds.txt  sandbox.py
2021/Day 14/: assertion.txt  part_01.py  part_02.py  (+1 more)
2022/Day 05/: main.py  pyproject.toml
2022/Day 11/: main.py  pyproject.toml
2022/Day 12/: main.py  pyproject.toml
2022/Day 13/: main.py  pyproject.toml
Day 03/: main.py  pyproject.toml
(+62 files in other folders)
