[tool.poetry]
name = "day 05"
version = "0.1.0"
description = ""
authors = ["Scott Barclay <75497242+csb1227@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
